chore(dev): qc testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
   }
 
   cerebroConfig {
+    
     cipherTaxonomy                        = "$params.databaseDirectory"  // ncbi nodes format
 
     qualityControlBackgroundOnly          = false
@@ -83,16 +84,26 @@ params {
     panelExtraction                   = true  // extract aligned reads from background before further processing
 
     assembly                          = true
-    assemblyMethod                    = "shovill"
-    assemblyCheckM                    = true
+    assemblyMethod                    = "shovill-skesa"
+    assemblyChecks                    = "checkm2"
+    
     assemblyAnnotation                = true
     assemblyAnnotationMethod          = "bakta"
+    
     assemblyMlst                      = true 
     assemblyMlstMethod                = "mlst"
+
     assemblyAmr                       = true
-    assemblyAmrMethod                 = "ng-star "
+    assemblyAmrMethod                 = "ng-star abrit-amr"
     assemblyAmrIndex                  = "$params.databaseDirectory/ngono_ngstar.fasta"
     assemblyAmrSpecies                = "Neisseria gonorrhea"
+
+    assemblyMgeContig                 = true
+    assemblyMgeScan                   = true
+    assemblyMgeScanWindow             = 2000
+    assemblyMgeMethod                 = "genomad"
+    assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
+
 
   }
 
@@ -101,41 +112,46 @@ params {
     taxonomicProfile {
 
       aligner                         = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/cipher"
-      alignmentReference              = "$params.databaseDirectory/cipher.fasta.gz"
+      alignmentIndex                  = "$params.databaseDirectory/virus"
+      alignmentReference              = "$params.databaseDirectory/virus.fasta.xz"
       alignmentRemapThreads           = 2
       alignmentRemapParallel          = 4
+
       alignmentSubset                 = false
-      alignmentSubsetIndex            = "$params.databaseDirectory/cipher.mash"
+      alignmentSubsetIndex            = "$params.databaseDirectory/virus.mash"
       alignmentSubsetMinHashes        = 1
 
       classifier                      = "kraken2 metabuli kmcp sylph"
+      classifierReference             = "$params.databaseDirectory/virus.fasta.xz"
+      classifierCoverageRemap         = true
+      classifierBrackenProfile        = true
+      classifierAbundanceCorrection   = true
+      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
 
-      abundanceCorrection             = true
-      brackenProfile                  = true
-      coverageRemap                   = true
-      genomeLengths                   = "$params.databaseDirectory/genome_lengths.tsv.xz"
-      classifierReference             = "$params.databaseDirectory/cipher.fasta.xz"
-
-      metabuliIndex                   = "$params.databaseDirectory/cipher.metabuli"
+      metabuliIndex                   = "$params.databaseDirectory/virus.metabuli"
       metabuliReference               = "$params.pathogenDetection.taxonomicProfile.classifierReference"
       
-      krakenIndex                     = "$params.databaseDirectory/cipher.kraken2"
+      krakenIndex                     = "$params.databaseDirectory/virus.kraken2"
       krakenReference                 = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+      krakenConfidence                = 0.1
+      brackenReadLength               = 150
+      brackenRank                     = "S"
+      brackenMinReads                 = 3
 
-      sylphIndex                      = "$params.databaseDirectory/cipher.sylph"
+      sylphIndex                      = "$params.databaseDirectory/virus.syldb"
       sylphReference                  = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+      sylphMetadata                   = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
 
-      kmcpIndex                       = "$params.databaseDirectory/cipher.kmcp"
+      kmcpIndex                       = "$params.databaseDirectory/virus.kmcp"
       kmcpReference                   = "$params.pathogenDetection.taxonomicProfile.classifierReference"
-      kmcpMode                        = 0
+      kmcpMode                        = 0  // pathogen detection
       
     }
 
-    metagenomeAssembly {              // low abundance configuration for meta-gp cns
+    metagenomeAssembly {              // low abundance configuration for csf
 
-      assembler                       = "metaspades" // metaspades megahit
-      binner                          = "concoct"  // concoct semibin2
+      assembler                       = "metaspades"  // metaspades megahit
+      binner                          = "concoct"     // concoct semibin2
       
       remapCoverage                   = true
       remapCoverageAligner            = "minimap2"
@@ -143,7 +159,7 @@ params {
 
       contigProfile                   = true
       contigProfileMethod             = "sylph"
-      contigProfileIndex              = "$params.databaseDirectory/cipher.sylph"
+      contigProfileIndex              = "$params.databaseDirectory/cipher.syldb"
       contigProfileReference          = "$params.pathogenDetection.taxonomicProfile.classifierReference"
 
       ncbiDatabase                    = true
@@ -156,7 +172,7 @@ params {
       viralDetectionIndex             = "$params.databaseDirectory/genomad_db"
 
       virusProfile                    = true
-      virusProfileMethod              = "minimap2"  // sylph
+      virusProfileMethod              = "minimap2"
       virusProfileIndex               = "$params.databaseDirectory/img_vr.fasta.xz"
       virusProfileReference           = "$params.databaseDirectory/img_vr.fasta.xz"
 
@@ -218,7 +234,7 @@ params {
       kmcp                  = 8
     }
     memory {
-      metabuli              = "64 GB"
+      metabuli              = "36 GB"
     }
   }
 
@@ -280,21 +296,48 @@ profiles {
 
 process {
 
-    withLabel: cerebro { cpus = params.resources.threads.cerebro }
-
-    withLabel: panviralVirusRecovery { cpus = params.resources.threads.vircov }
-
-    withLabel: qualityReadScan { cpus = 2 }
-    withLabel: qualityDeduplication { cpus = 2 }
-    withLabel: qualityReadQuality { cpus = params.resources.threads.fastp }
-    withLabel: qualityHostDepletion { cpus = params.resources.threads.scrubby }
-    withLabel: qualityInternalControls { cpus = params.resources.threads.vircov }
-    withLabel: qualitySyntheticControls { cpus = params.resources.threads.vircov }
-    withLabel: qualityBackgroundDepletion { cpus = params.resources.threads.vircov }
-    withLabel: pathogenProfileKraken2 { cpus = params.resources.threads.kraken2 }
-    withLabel: pathogenProfileBracken { cpus = params.resources.threads.bracken }
-    withLabel: pathogenProfileMetabuli{ cpus = params.resources.threads.metabuli; memory = params.resources.memory.metabuli }
-    withLabel: pathogenProfileSylph { cpus = params.resources.threads.sylph }
-    withLabel: pathogenProfileKmpc { cpus = params.resources.threads.kmcp }
+    withLabel: cerebro { 
+      cpus = params.resources.threads.cerebro 
+    }
+    withLabel: panviralVirusRecovery { 
+      cpus = params.resources.threads.vircov 
+    }
+    withLabel: qualityReadScan { 
+      cpus = 2 
+    }
+    withLabel: qualityDeduplication { 
+      cpus = 2 
+    }
+    withLabel: qualityReadQuality { 
+      cpus = params.resources.threads.fastp 
+    }
+    withLabel: qualityHostDepletion { 
+      cpus = params.resources.threads.scrubby 
+    }
+    withLabel: qualityInternalControls { 
+      cpus = params.resources.threads.vircov 
+    }
+    withLabel: qualitySyntheticControls { 
+      cpus = params.resources.threads.vircov 
+    }
+    withLabel: qualityBackgroundDepletion { 
+      cpus = params.resources.threads.vircov 
+    }
+    withLabel: pathogenProfileKraken2 { 
+      cpus = params.resources.threads.kraken2 
+      }
+    withLabel: pathogenProfileBracken { 
+      cpus = params.resources.threads.bracken 
+      }
+    withLabel: pathogenProfileSylph { 
+      cpus = params.resources.threads.sylph 
+      }
+    withLabel: pathogenProfileKmcp { 
+      cpus = params.resources.threads.kmcp 
+    }
+    withLabel: pathogenProfileMetabuli {  
+      cpus = params.resources.threads.metabuli
+      memory = params.resources.memory.metabuli 
+    }
 
 }
