chore(dev): qc testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -151,6 +151,9 @@ params {
     metagenomeAssembly {              // low abundance configuration for csf
 
       assembler                       = "metaspades"  // metaspades megahit
+      metaspadesKmer                  = ""
+      megahitKmer                     = ""
+      
       binner                          = "concoct"     // concoct semibin2
       
       remapCoverage                   = true
