--- a/cerebro/stack/pipe/Cargo.toml
+++ b/cerebro/stack/pipe/Cargo.toml
@@ -52,5 +52,5 @@ clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wr
 anstyle = "1.0.6"
 fancy-regex = "0.11.0"
 
-vircov = { path = "/data/dev/meta-gp/pipeline/vircov" }
-scrubby = { path = "/data/dev/meta-gp/pipeline/scrubby" }
+vircov = { git = "https://github.com/esteinig/vircov", branch = "dev-refactor" }
+scrubby = { git = "https://github.com/esteinig/scrubby", branch = "dev" }
