chore: add downloader; add resource config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,15 @@
+manifest {
+    name = "cerebro"
+    author = "@esteinig"
+    defaultBranch = "main"
+    homePage = 'https://github.com/esteinig/cerebro'
+    description = 'Metagenomic diagnostics of low-abundance pathogens'
+    mainScript = 'main.nf'
+    version = '0.10.0'
+    nextflowVersion = '>=24.04'
+}
+
+
 params {
 
   fastqPaired                         = null                                  // glob string
@@ -24,7 +36,7 @@ params {
 
   cerebroConfig {
     
-    cipherTaxonomy                        = "$params.databaseDirectory"  // ncbi nodes format
+    cipherTaxonomy                        = "$params.databaseDirectory"       // ncbi nodes format
 
     qualityControlBackgroundOnly          = false
     qualityControlDeduplicateBefore       = true
@@ -123,16 +135,18 @@ params {
 
       classifier                      = "kraken2 metabuli kmcp sylph"
       classifierReference             = "$params.databaseDirectory/virus.fasta.xz"
+      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
+      
       classifierCoverageRemap         = true
       classifierBrackenProfile        = true
       classifierAbundanceCorrection   = true
-      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
 
       metabuliIndex                   = "$params.databaseDirectory/virus.metabuli"
       metabuliReference               = "$params.pathogenDetection.taxonomicProfile.classifierReference"
       
       krakenIndex                     = "$params.databaseDirectory/virus.kraken2"
       krakenReference                 = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+
       krakenConfidence                = 0.1
       brackenReadLength               = 150
       brackenRank                     = "S"
@@ -229,7 +243,7 @@ params {
       fastp                 = 8
       scrubby               = 8
       vircov                = 8
-      cerebro               = 1
+      cerebro               = 2
       kraken2               = 8
       bracken               = 1
       metabuli              = 8
@@ -239,34 +253,57 @@ params {
     memory {
       metabuli              = "36 GB"
     }
+    conda {
+      bracken               = "$baseDir/lib/resources/conda/bracken.yml"
+      cerebro               = "$baseDir/lib/resources/conda/cerebro.yml"
+      fastp                 = "$baseDir/lib/resources/conda/fastp.yml"
+      kmcp                  = "$baseDir/lib/resources/conda/kmcp.yml"
+      kraken2               = "$baseDir/lib/resources/conda/kraken2.yml"
+      metabuli              = "$baseDir/lib/resources/conda/metabuli.yml"
+      scrubby               = "$baseDir/lib/resources/conda/scrubby.yml"
+      sylph                 = "$baseDir/lib/resources/conda/sylph.yml"
+      vircov                = "$baseDir/lib/resources/conda/vircov.yml"
+      virscrub              = "$baseDir/lib/resources/conda/virscrub.yml"
+    }
   }
-
-
 }
 
 profiles {
 
+  conda {
+    conda.enabled = true
+  }
+  mamba {
+    conda.enabled = true
+    conda.useMamba = true
+  }
+
+  twist {
+    params.qualityControl.readDeduplication   = false  
+    params.qualityControl.internalControls    = false 
+    params.qualityControl.syntheticControls   = false 
+    params.qualityControl.backgroundDepletion = false 
+  }
+
   cns {
-
-    params.pathogenDetection.qualityControl.readDeduplication   = true  
-    params.pathogenDetection.qualityControl.adapterForward      = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
-    params.pathogenDetection.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
-
+    params.qualityControl.readDeduplication   = true  
+    params.qualityControl.adapterForward      = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
+    params.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
   }
 
 
   bg {
+      params.cerebroConfig.processQcBackgroundOnly         = true
+      params.qualityControl.syntheticControls              = false
+      params.qualityControl.internalControls               = false
+      params.qualityControl.hostDepletion                  = false
+      params.qualityControl.backgroundDepletion            = true
+      params.qualityControl.backgroundDepletionAligner     = "bowtie2"
+      params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
+      params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
+  }
 
-      params.pathogenDetection.cerebroConfig.processQcBackgroundOnly         = true
-
-      params.pathogenDetection.qualityControl.syntheticControls              = false
-      params.pathogenDetection.qualityControl.internalControls               = false
-      params.pathogenDetection.qualityControl.hostDepletion                  = false
-
-      params.pathogenDetection.qualityControl.backgroundDepletion            = true
-      params.pathogenDetection.qualityControl.backgroundDepletionAligner     = "bowtie2"
-      params.pathogenDetection.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
-      params.pathogenDetection.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
+  conda {
 
   }
 
@@ -301,46 +338,60 @@ process {
 
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
+      conda = params.resources.conda.cerebro
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.vircov
     }
     withLabel: qualityReadScan { 
-      cpus = 2 
+      cpus = params.resources.threads.cerebro 
+      conda = params.resources.conda.cerebro
     }
     withLabel: qualityDeduplication { 
-      cpus = 2 
+      cpus = params.resources.threads.cerebro 
+      conda = params.resources.conda.cerebro
     }
     withLabel: qualityReadQuality { 
       cpus = params.resources.threads.fastp 
+      conda = params.resources.conda.fastp
     }
     withLabel: qualityHostDepletion { 
       cpus = params.resources.threads.scrubby 
+      conda = params.resources.conda.scrubby
     }
     withLabel: qualityInternalControls { 
       cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.virscrub
     }
     withLabel: qualitySyntheticControls { 
       cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.virscrub
     }
     withLabel: qualityBackgroundDepletion { 
       cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.virscrub
     }
     withLabel: pathogenProfileKraken2 { 
       cpus = params.resources.threads.kraken2 
-      }
+      conda = params.resources.conda.kraken2
+    }
     withLabel: pathogenProfileBracken { 
       cpus = params.resources.threads.bracken 
-      }
+      conda = params.resources.conda.bracken
+    }
     withLabel: pathogenProfileSylph { 
       cpus = params.resources.threads.sylph 
-      }
+      conda = params.resources.conda.sylph
+    }
     withLabel: pathogenProfileKmcp { 
       cpus = params.resources.threads.kmcp 
+      conda = params.resources.conda.kmcp
     }
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
       memory = params.resources.memory.metabuli 
+      conda = params.resources.conda.metabuli
     }
 
 }
