--- a/cerebro/stack/pipe/Cargo.toml
+++ b/cerebro/stack/pipe/Cargo.toml
@@ -54,3 +54,5 @@ fancy-regex = "0.11.0"
 
 vircov = { git = "https://github.com/esteinig/vircov", branch = "dev-refactor" }
 scrubby = { git = "https://github.com/esteinig/scrubby", branch = "dev" }
+tar = "0.4.41"
+reqwest = { version = "0.12.7", features = ["blocking"] }
