--- a/nextflow.config
+++ b/nextflow.config
@@ -43,6 +43,8 @@ params {
     qualityControlInternalControlsBefore  = true
     
     profileAlignmentSpeciesLca            = true
+    ncbiDatabaseSpeciesLca                = true
+    
   }
 
   qualityControl {    
@@ -123,70 +125,69 @@ params {
 
     taxonomicProfile {
 
-      aligner                         = "bowtie2"
+      alignmentMethod                 = "bowtie2"
       alignmentIndex                  = "$params.databaseDirectory/virus"
       alignmentReference              = "$params.databaseDirectory/virus.fasta.xz"
       alignmentRemapThreads           = 2
       alignmentRemapParallel          = 4
 
+      ncbiDatabase                    = true  // ISO benchmarking and compliance
+      ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
+      ncbiDatabaseMethod              = "blastn diamond"
+
       alignmentSubset                 = false
       alignmentSubsetIndex            = "$params.databaseDirectory/virus.mash"
       alignmentSubsetMinHashes        = 1
 
-      classifier                      = "kraken2 metabuli kmcp sylph"
-      classifierReference             = "$params.databaseDirectory/virus.fasta.xz"
-      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
-      
-      classifierCoverageRemap         = true
-      classifierBrackenProfile        = true
-      classifierAbundanceCorrection   = true
+      classifierMethod                = "kraken2 metabuli"
 
       metabuliIndex                   = "$params.databaseDirectory/virus.metabuli"
-      metabuliReference               = "$params.pathogenDetection.taxonomicProfile.classifierReference"
-      
       krakenIndex                     = "$params.databaseDirectory/virus.kraken2"
-      krakenReference                 = "$params.pathogenDetection.taxonomicProfile.classifierReference"
-
       krakenConfidence                = 0.1
+
+      relativeAbundanceCorrection     = true
+      relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
+
+      profilerMethod                  = "kmcp sylph bracken"
       brackenReadLength               = 150
       brackenRank                     = "S"
       brackenMinReads                 = 3
-
       sylphIndex                      = "$params.databaseDirectory/virus.syldb"
-      sylphReference                  = "$params.pathogenDetection.taxonomicProfile.classifierReference"
       sylphMetadata                   = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
-
       kmcpIndex                       = "$params.databaseDirectory/virus.kmcp"
-      kmcpReference                   = "$params.pathogenDetection.taxonomicProfile.classifierReference"
       kmcpMode                        = 0  // pathogen detection
       
     }
 
     metagenomeAssembly {              // low abundance configuration for csf
 
-      assembler                       = "metaspades"  // metaspades megahit
-      metaspadesKmer                  = ""
-      megahitKmer                     = ""
-      
-      binner                          = "concoct"     // concoct semibin2
-      
-      remapCoverage                   = true
-      remapCoverageAligner            = "minimap2"
-      remapCoveragePolisher           = "cobra"
+      assemblyMethod                  = "metaspades megahit"
+      assemblyArgs                    = ""
+      assemblyKmerList                = "21,29,39,59,79,99,119,127"
+      assemblyMinContigLength         = 200
 
-      contigProfile                   = true
-      contigProfileMethod             = "sylph"
-      contigProfileIndex              = "$params.databaseDirectory/cipher.syldb"
-      contigProfileReference          = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+      binningMethod                   = "concoct metabat2"     
+      binningChunkSize                = 10000         // concoct
+      binningReadLength               = 150           // concoctI'm also there just in the wq
+      binningMinContigLength          = 1500          // concoct / metabat2
+      binningMinBinSize               = 5000          // concoct / metabat2
 
       ncbiDatabase                    = true
       ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
       ncbiDatabaseMethod              = "blastn diamond"
-      ncbiDatabaseSpeciesLca          = true
+
+      contigProfile                   = false
+      contigProfileMethod             = "sylph"
+      contigProfileIndex              = "$params.databaseDirectory/virus.syldb"
+      contigProfileMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
 
       virusDetection                  = true
-      viralDetectionMethod            = "genomad"
-      viralDetectionIndex             = "$params.databaseDirectory/genomad_db"
+      virusDetectionMethod            = "genomad"
+      virusDetectionMinContigLength   = 2000
+      virusDetectionIndex             = "$params.databaseDirectory/genomad_db"
+
+      virusContigPolish               = true
+      virusContigPolishMethod         = "cobra"
 
       virusProfile                    = true
       virusProfileMethod              = "minimap2"
@@ -235,7 +236,6 @@ params {
       gtdbtkDenovoOutgroup            = "p__Mycobacteria"
 
     }
-
   }
 
   resources {
@@ -246,20 +246,34 @@ params {
       cerebro               = 2
       kraken2               = 8
       bracken               = 1
+      minimap2              = 4
+      metabat2              = 4
       metabuli              = 8
       sylph                 = 8
       kmcp                  = 8
+      metaspades            = 8
+      megahit               = 8 
+      concoct               = 4
     }
     memory {
-      metabuli              = "36 GB"
+      metaspades            = "16 GB"
+      megahit               = "16 GB"
+      metabuli              = "16 GB"
+      kmcp                  = "16 GB"
     }
+
     conda {
       bracken               = "$baseDir/lib/resources/conda/bracken.yml"
       cerebro               = "$baseDir/lib/resources/conda/cerebro.yml"
+      concoct               = "$baseDir/lib/resources/conda/concoct.yml"
       fastp                 = "$baseDir/lib/resources/conda/fastp.yml"
       kmcp                  = "$baseDir/lib/resources/conda/kmcp.yml"
       kraken2               = "$baseDir/lib/resources/conda/kraken2.yml"
+      megahit               = "$baseDir/lib/resources/conda/megahit.yml"
       metabuli              = "$baseDir/lib/resources/conda/metabuli.yml"
+      metaspades            = "$baseDir/lib/resources/conda/metaspades.yml"
+      minimap2              = "$baseDir/lib/resources/conda/minimap2.yml"
+      metabat2              = "$baseDir/lib/resources/conda/metabat2.yml"
       scrubby               = "$baseDir/lib/resources/conda/scrubby.yml"
       sylph                 = "$baseDir/lib/resources/conda/sylph.yml"
       vircov                = "$baseDir/lib/resources/conda/vircov.yml"
@@ -386,6 +400,7 @@ process {
     }
     withLabel: pathogenProfileKmcp { 
       cpus = params.resources.threads.kmcp 
+      memory = params.resources.memory.kmcp 
       conda = params.resources.conda.kmcp
     }
     withLabel: pathogenProfileMetabuli {  
@@ -393,5 +408,26 @@ process {
       memory = params.resources.memory.metabuli 
       conda = params.resources.conda.metabuli
     }
-
+    withLabel: pathogenAssemblyMetaspades {  
+      cpus = params.resources.threads.metaspades
+      memory = params.resources.memory.metaspades 
+      conda = params.resources.conda.metaspades
+    }
+    withLabel: pathogenAssemblyMegahit {  
+      cpus = params.resources.threads.megahit
+      memory = params.resources.memory.megahit 
+      conda = params.resources.conda.megahit
+    }
+    withLabel: pathogenAssemblyContigCoverage {  
+      cpus = params.resources.threads.minimap2
+      conda = params.resources.conda.minimap2
+    }
+    withLabel: pathogenAssemblyConcoct {  
+      cpus = params.resources.threads.concoct
+      conda = params.resources.conda.concoct
+    }
+    withLabel: pathogenAssemblyMetabat2 {  
+      cpus = params.resources.threads.metabat2
+      conda = params.resources.conda.metabat2
+    }
 }
