--- a/lib/resources/conda/metabat2.yml
+++ b/lib/resources/conda/metabat2.yml
@@ -1,8 +1,6 @@
-name: cerebro-sylph
+name: cerebro-metabat2
 channels:
   - conda-forge        
   - bioconda    
 dependencies:
-  - sylph=0.6.1
-  - python
-  - pandas
+  - metabat2=2.17
