--- a/lib/resources/conda/metaspades.yml
+++ b/lib/resources/conda/metaspades.yml
@@ -1,8 +1,6 @@
-name: cerebro-sylph
+name: cerebro-metaspades
 channels:
   - conda-forge        
   - bioconda    
 dependencies:
-  - sylph=0.6.1
-  - python
-  - pandas
+  - spades=4.0.0
