chore(dev): change dev dependencies

--- a/nextflow.config
+++ b/nextflow.config
@@ -168,7 +168,7 @@ params {
 
       binningMethod                   = "concoct metabat2"     
       binningChunkSize                = 10000         // concoct
-      binningReadLength               = 150           // concoctI'm also there just in the wq
+      binningReadLength               = 150           // concoct
       binningMinContigLength          = 1500          // concoct / metabat2
       binningMinBinSize               = 5000          // concoct / metabat2
 
