--- a/cerebro/stack/pipe/Cargo.toml
+++ b/cerebro/stack/pipe/Cargo.toml
@@ -52,7 +52,8 @@ clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wr
 anstyle = "1.0.6"
 fancy-regex = "0.11.0"
 
-vircov = { git = "https://github.com/esteinig/vircov", branch = "dev-refactor" }
-scrubby = { git = "https://github.com/esteinig/scrubby", branch = "dev" }
+vircov = { git = "https://github.com/esteinig/vircov", branch = "main" }
+scrubby = { git = "https://github.com/esteinig/scrubby", branch = "main" }
+
 tar = "0.4.41"
 reqwest = { version = "0.12.7", features = ["blocking"] }
