chore(dev): add stack config comment

--- a/nextflow.config
+++ b/nextflow.config
@@ -118,7 +118,6 @@ params {
     assemblyMgeMethod                 = "genomad"
     assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
 
-
   }
 
   pathogenDetection {
@@ -140,7 +139,6 @@ params {
       alignmentSubsetMinHashes        = 1
 
       classifierMethod                = "kraken2 metabuli"
-
       metabuliIndex                   = "$params.databaseDirectory/virus.metabuli"
       krakenIndex                     = "$params.databaseDirectory/virus.kraken2"
       krakenConfidence                = 0.1
@@ -148,7 +146,7 @@ params {
       relativeAbundanceCorrection     = true
       relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
 
-      profilerMethod                  = "kmcp sylph bracken"
+      profilerMethod                  = "bracken sylph kmcp"
       brackenReadLength               = 150
       brackenRank                     = "S"
       brackenMinReads                 = 3
