chore(dev): update profile params; update svelte versions security

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,9 +3,9 @@ manifest {
     author = "@esteinig"
     defaultBranch = "main"
     homePage = 'https://github.com/esteinig/cerebro'
-    description = 'Metagenomic diagnostics of low-abundance pathogens'
+    description = 'Clinical metagenomic diagnostics pipeline'
     mainScript = 'main.nf'
-    version = '0.10.0'
+    version = '0.8.0'
     nextflowVersion = '>=24.04'
 }
 
@@ -130,30 +130,26 @@ params {
       alignmentRemapThreads           = 2
       alignmentRemapParallel          = 4
 
-      ncbiDatabase                    = true  // ISO benchmarking and compliance
-      ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
-      ncbiDatabaseMethod              = "blastn diamond"
-
       alignmentSubset                 = false
       alignmentSubsetIndex            = "$params.databaseDirectory/virus.mash"
       alignmentSubsetMinHashes        = 1
 
       classifierMethod                = "kraken2 metabuli"
-      metabuliIndex                   = "$params.databaseDirectory/virus.metabuli"
-      krakenIndex                     = "$params.databaseDirectory/virus.kraken2"
-      krakenConfidence                = 0.1
+      classifierMetabuliIndex         = "$params.databaseDirectory/virus.metabuli"
+      classifierKrakenIndex           = "$params.databaseDirectory/virus.kraken2"
+      classifierKrakenConfidence      = 0.1
 
       relativeAbundanceCorrection     = true
       relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
 
       profilerMethod                  = "bracken sylph kmcp"
-      brackenReadLength               = 150
-      brackenRank                     = "S"
-      brackenMinReads                 = 3
-      sylphIndex                      = "$params.databaseDirectory/virus.syldb"
-      sylphMetadata                   = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
-      kmcpIndex                       = "$params.databaseDirectory/virus.kmcp"
-      kmcpMode                        = 0  // pathogen detection
+      profilerBrackenReadLength       = 150
+      profilerBrackenRank             = "S"
+      profilerBrackenMinReads         = 3
+      profilerSylphIndex              = "$params.databaseDirectory/virus.syldb"
+      profilerSylphMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
+      profilerKmcpIndex               = "$params.databaseDirectory/virus.kmcp"
+      profilerKmcpMode                = 0  // pathogen detection
       
     }
 
@@ -165,14 +161,14 @@ params {
       assemblyMinContigLength         = 200
 
       binningMethod                   = "concoct metabat2"     
-      binningChunkSize                = 10000         // concoct
-      binningReadLength               = 150           // concoct
-      binningMinContigLength          = 1500          // concoct / metabat2
-      binningMinBinSize               = 5000          // concoct / metabat2
+      binningChunkSize                = 10000   // concoct
+      binningReadLength               = 150     // concoct
+      binningMinContigLength          = 1500    // concoct / metabat2
+      binningMinBinSize               = 5000    // concoct / metabat2
 
       ncbiDatabase                    = true
       ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
-      ncbiDatabaseMethod              = "blastn diamond"
+      ncbiDatabaseMethod              = "blast diamond"
 
       contigProfile                   = false
       contigProfileMethod             = "sylph"
